objects/adapps__OptimizerPlus_Unassigned_Page_Lay_Item__c.object
<CustomObject>
    <fields>
        <fullName>adapps__Page_Layout_Name__c</fullName>
        <label>Page Layout Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adapps__Unassigned_Page_Layouts__c</fullName>
        <label>Unassigned Page Layouts</label>
        <referenceTo>adapps__OptimizerPlus_Unassigned_Page_Layouts__c</referenceTo>
        <relationshipLabel>Unassigned Page Layouts Items</relationshipLabel>
        <relationshipName>Unassigned_Page_Layouts_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>adapps__Url__c</fullName>
        <label>Url</label>
        <type>Url</type>
    </fields>
    <label>Unassigned Page Layouts Item</label>
    <nameField>
        <label>Unassigned Page Layouts Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unassigned Page Layouts Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>